[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "mcp[cli]>=1.16.0",
]
